Save SKU data from admin product form
- Cập nhật AdminProductServlet để lưu thông tin biến thể SKU từ form sản phẩm.
- Hỗ trợ nhận sku, size, color, extraPrice, stock và minStock cho từng biến thể.
- Đảm bảo dữ liệu biến thể được thêm hoặc cập nhật đúng khi admin lưu sản phẩm.
- Giữ luồng quản lý sản phẩm hiện có và mở rộng thêm quản lý tồn kho biến thể.